--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title_separator          : "-"
 name                     : "Your Name"
 description              : "An amazing website."
 url                      : https://binarybot.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : /minimal-mistakes # the subpath of your site, e.g. "/blog"
+baseurl                  : /minimalmistake # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
@@ -77,9 +77,9 @@ og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type                   : # Person or Organization (defaults to Person)
+  type                   : Illinois Institute of Technology # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  links:  https://developers.google.com/structured-data/customize/social-profiles   # An array of links to social media profiles
 
 # Analytics
 analytics:
@@ -90,11 +90,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Mohan Nataraj"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an amazing person."
-  location         : "Somewhere"
-  email            :
+  location         : "Chicago"
+  email            : mnatara3@hawk.iit.edu
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
